[gd_scene load_steps=9 format=3 uid="uid://dfcg6a1bw8oyu"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_o1wpw"]
[ext_resource type="PackedScene" uid="uid://b7niqv1ajes70" path="res://scenes/LevelSelect.tscn" id="2_v64ue"]
[ext_resource type="PackedScene" uid="uid://bt0convd558f" path="res://scenes/environment.tscn" id="3_cshli"]
[ext_resource type="FontFile" uid="uid://e1l1t5u611rk" path="res://assets/Hefty Me.ttf" id="4_6nnm3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bser5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cavkw"]
bg_color = Color(0.851769, 0.851769, 0.851769, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3blv"]
bg_color = Color(0.442911, 0.442911, 0.442911, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rulp1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
shadow_size = 4

[node name="TitleScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1wpw")
level_scene = ExtResource("2_v64ue")

[node name="Environment" parent="." instance=ExtResource("3_cshli")]
layout_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("4_6nnm3")
theme_override_font_sizes/font_size = 128
text = "Bubble Brokers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("4_6nnm3")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_bser5")
theme_override_styles/hover = SubResource("StyleBoxFlat_cavkw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x3blv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rulp1")
text = "Start game"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("4_6nnm3")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_bser5")
theme_override_styles/hover = SubResource("StyleBoxFlat_cavkw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x3blv")
theme_override_styles/normal = SubResource("StyleBoxFlat_rulp1")
text = "Volume"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="VolumeSlider" type="HSlider" parent="."]
visible = false
layout_mode = 0
offset_left = 618.0
offset_top = 369.0
offset_right = 793.0
offset_bottom = 385.0
min_value = -30.0
max_value = 0.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
